--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "async": "^1.5.2",
     "canvas": "^1.3.7",
-    "fs-extra": "^0.26.4",
+    "fs-extra": "^0.26.5",
     "io-barcode": "^1.2.0",
+    "jsonwebtoken": "^5.5.4",
     "moment": "^2.11.1",
     "mysql": "^2.10.2",
     "pem": "^1.8.1",
+    "restify-jwt": "^0.4.0",
     "toml": "^2.3.0"
   }
 }
