--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^5.5.4",
     "moment": "^2.11.1",
     "mysql": "^2.10.2",
+    "nodemailer": "^2.1.0",
     "pem": "^1.8.1",
     "restify-jwt": "^0.4.0",
     "toml": "^2.3.0"
